--- a/index.html
+++ b/index.html
@@ -152,21 +152,21 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
-              <img src="imagenes/infraestructurasit-educacionit.jpg" width="300px" height="400px" class="d-block w-100" alt="...">
+              <img src="imagenes/horno3.png" width="400px" height="700px" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>First slide label</h5>
                 <p>Some representative placeholder content for the first slide.</p>
               </div>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
-              <img src="imagenes/icono.png" class="d-block w-100" alt="...">
+              <img src="imagenes/horno2.png" class="d-block w-100"  width="400px" height="700px" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Second slide label</h5>
                 <p>Some representative placeholder content for the second slide.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="imagenes/marba-logo-azul (3).svg" class="d-block w-100" alt="...">
+              <img src="imagenes/horno1.png"  class="d-block w-100 "  width="400px" height="700px" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Third slide label</h5>
                 <p>Some representative placeholder content for the third slide.</p>
