--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <script src="https://kit.fontawesome.com/231b14a177.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <meta name="keywords" content="Viajes Hotel Hostel Jujuy resevar hospedaje ">
@@ -48,11 +49,11 @@
   <!-- imagen fondo -->
 
   <div class="caja">
-    <div class="imagen">
+    <div data-aos="fade-right" class="imagen">
       <img src="imagenes/marba-logo-blanco (1).svg" width="300px" height="200px" class="img-fluid" alt="">
-      <h1 class="tituloMarba">MARBA</h1>
-      <h3 class="subtitulo">Servicios integrales</h3>
-      <button type="button" id="btnMarba" class="btn btn-outline-primary d-block mx-auto "><a href="#contacto"
+      <h1 data-aos="fade-right" class="tituloMarba">MARBA</h1>
+      <h3 data-aos="fade-right" class="subtitulo">Servicios integrales</h3>
+      <button data-aos="fade-right" type="button" id="btnMarba" class="btn btn-outline-primary d-block mx-auto "><a href="#contacto"
           class="text-decoration-none">Contactar</a> </button>
     </div>
 
@@ -62,9 +63,9 @@
 
   <!-- servicios  -->
   <section id="servicios" class="datacenter">
-    <h1 class="tituloServicios">Datacenter</h1>
-    <img src="./imagenes/datacenter.jpg" class="img-fluid" alt="">
-    <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, adipisci animi. Explicabo
+    <h1 data-aos="fade-left" class="tituloServicios">Datacenter</h1>
+    <img data-aos="fade-left" src="./imagenes/datacenter.jpg" class="img-fluid" alt="">
+    <p data-aos="fade-left"  class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, adipisci animi. Explicabo
       placeat nulla neque eligendi eum earum ex ipsum laborum, similique necessitatibus aliquam iure odit? Minima non
       laboriosam suscipit.
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, modi voluptatem similique officiis doloremque
@@ -76,7 +77,7 @@
       nihil consequuntur minus vel, distinctio obcaecati ullam cum eum recusandae dolorem, suscipit unde optio ex
       eveniet!
     </p>
-    <div class="accordion accordion-flush" id="accordionFlushExample">
+    <div data-aos="fade-left" class="accordion accordion-flush" id="accordionFlushExample">
       <div class="accordion-item">
         <h2 class="accordion-header" id="flush-headingOne">
           <button id="botonData" class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -94,9 +95,9 @@
   </section>
 
   <section class="infraestructuraIndustria">
-    <h1 class="tituloServicios">Infraestructura Industria</h1>
-    <img src="./imagenes/datacenter.jpg" class="img-fluid" alt="">
-    <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, adipisci animi. Explicabo
+    <h1 data-aos="fade-right"  class="tituloServicios">Infraestructura Industria</h1>
+    <img data-aos="fade-right" src="./imagenes/datacenter.jpg" class="img-fluid" alt="">
+    <p data-aos="fade-right" class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, adipisci animi. Explicabo
       placeat nulla neque eligendi eum earum ex ipsum laborum, similique necessitatibus aliquam iure odit? Minima non
       laboriosam suscipit.
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, modi voluptatem similique officiis doloremque
@@ -108,7 +109,7 @@
       nihil consequuntur minus vel, distinctio obcaecati ullam cum eum recusandae dolorem, suscipit unde optio ex
       eveniet!
     </p>
-    <div class="accordion accordion-flush" id="accordionFlushExample">
+    <div data-aos="fade-right" class="accordion accordion-flush" id="accordionFlushExample">
       <div class="accordion-item">
         <h2 class="accordion-header" id="flush-headingOne">
           <button id="botonData" class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -127,9 +128,9 @@
   </section>
 
   <section class="ingenieriaConsultoria">
-    <h1 class="tituloServicios">Ingenieria y Consultoria</h1>
-    <img src="./imagenes/datacenter.jpg" class="img-fluid" alt="">
-    <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, adipisci animi. Explicabo
+    <h1 data-aos="fade-left" class="tituloServicios">Ingenieria y Consultoria</h1>
+    <img data-aos="fade-left" src="./imagenes/datacenter.jpg" class="img-fluid" alt="">
+    <p data-aos="fade-left" class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, adipisci animi. Explicabo
       placeat nulla neque eligendi eum earum ex ipsum laborum, similique necessitatibus aliquam iure odit? Minima non
       laboriosam suscipit.
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, modi voluptatem similique officiis doloremque
@@ -141,7 +142,7 @@
       nihil consequuntur minus vel, distinctio obcaecati ullam cum eum recusandae dolorem, suscipit unde optio ex
       eveniet!
     </p>
-    <div class="accordion accordion-flush" id="accordionFlushExample">
+    <div data-aos="fade-left" class="accordion accordion-flush" id="accordionFlushExample">
       <div class="accordion-item">
         <h2 class="accordion-header" id="flush-headingOne">
           <button id="botonData" class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -160,9 +161,9 @@
 
   <!-- quienes somos  -->
 
-  <div id="quienesSomos" class="caja-quienesSomos">
-    <h1>Quienes somos</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, delectus doloribus officia totam minus nisi
+  <div  id="quienesSomos" class="caja-quienesSomos">
+    <h1> Quienes somos</h1>
+    <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, delectus doloribus officia totam minus nisi
       sequi odit vero, sint aliquam ipsum quos. Exercitationem minima numquam sapiente libero. Nihil, ipsa perspiciatis.
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. At repellat voluptate, explicabo et soluta ab
       voluptatibus numquam optio laboriosam accusantium, laudantium ipsa maxime similique eos rem. Quisquam quasi
@@ -179,13 +180,13 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas commodi quaerat quisquam ipsa nisi amet sint
       dignissimos minima corporis aliquid, quam dolorem perspiciatis voluptatem necessitatibus. Error possimus quidem
       temporibus. Aliquam?</p>
-    <p>Nuestros <b>Valores</b> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae nihil, natus perspiciatis
+    <p >Nuestros <b>Valores</b> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae nihil, natus perspiciatis
       ipsam aliquid incidunt sunt odio quibusdam facere quaerat, minima exercitationem rem, cum consectetur quo libero
       veniam dolores ratione?</p>
-    <p>Nuestra <b>Mision</b> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae nihil, natus perspiciatis
+    <p >Nuestra <b>Mision</b> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae nihil, natus perspiciatis
       ipsam aliquid incidunt sunt odio quibusdam facere quaerat, minima exercitationem rem, cum consectetur quo libero
       veniam dolores ratione?</p>
-    <p>Nuestra <b>Vision</b> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae nihil, natus perspiciatis
+    <p >Nuestra <b>Vision</b> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae nihil, natus perspiciatis
       ipsam aliquid incidunt sunt odio quibusdam facere quaerat, minima exercitationem rem, cum consectetur quo libero
       veniam dolores ratione?</p>
   </div>
@@ -306,7 +307,10 @@
 
 
   </footer>
-
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
