--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Marbasi</title>
+  <link rel="icon" href="imagenes/iconoMarba.ico"
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <script src="https://kit.fontawesome.com/231b14a177.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.css">
@@ -112,7 +113,7 @@ EXIN es un proveedor global de exámenes, es un organismo independiente y sin fi
 
   <section class="infraestructuraIndustria">
     <h1   class="tituloServicios">Infraestructura Industria</h1>
-    <img  src="./imagenes/datacenter.jpg" class="img-fluid" alt="">
+    <img  src="./imagenes/infraestructura-industrial-49115648.jpg" class="img-fluid" alt="">
     <p  class="parrafo">Nos especializamos en el diseño y ejecución de instalaciones eléctricas de baja y media tensión. Llevamos a delante su proyecto de energías renovables de microredes on-off grid, híbridos y grandes despliegues en ámbito Nacional. Analizamos todas las variables técnicas y económicas puestas en juego para lograr el mejor aprovechamiento de los recursos sin descuidar la calidad. Realizamos mantenimiento predictivos, preventivos y correctivos se subestaciones y otros sistemas eléctricos. Para ello nos apoyamos en herramientas e instrumentos de primer nivel que garantizan la calidad del servicio. Nuestras capacidades de ingeniería cubren las necesidades que la industria solicita, incluyendo estudios eficiencia energética, luminotecnia, estudios de selectividad y ARC FLASCH, seguridad eléctrica, subestaciones y líneas de MT.
     </p>
     <div  class="accordion accordion-flush" id="accordionFlushExample">
@@ -149,7 +150,7 @@ EXIN es un proveedor global de exámenes, es un organismo independiente y sin fi
 
   <section class="ingenieriaConsultoria">
     <h1  class="tituloServicios">Termomecanica</h1>
-    <img  src="./imagenes/datacenter.jpg" class="img-fluid" alt="">
+    <img  src="./imagenes/pda-nt-ingenieria-termomecanica-IMG_20141004_183432650.jpg" class="img-fluid" alt="">
     <p  class="parrafo">Diseñamos y llevamos adelante su proyecto de refrigeración comercial e industrial. Nuestro portfolio de soluciones incluyen sistemas VRV, enfriadoras de liquido, Rooftop y sistemas separados. Brindamos servicio de mantenimiento multimarca con especialización en grandes equipos. Contamos con soluciones de control y monitoreo de variables ambientales Mantenimiento preventivo y correctivo. Confección de pliegos licitatorios.
     </p>
     <div data-aos="fade-left" class="accordion accordion-flush" id="accordionFlushExample">
@@ -325,7 +326,7 @@ En nuestra área de RR.HH contamos con 2 jefes en la selección de personal y 3 
    <script>
     $(document).ready(function(){
       $('.customer-logos').slick({
-          slidesToShow: 6,
+          slidesToShow: 4,
           slidesToScroll: 1,
           autoplay: true,
           autoplaySpeed: 1500,
