--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Marbasi</title>
-  <link rel="icon" href="imagenes/iconoMarba.ico"
+  <link rel="icon" href="imagenes/iconoMarba.ico"/>
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <script src="https://kit.fontawesome.com/231b14a177.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.css">
