--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ En nuestra área de RR.HH contamos con 2 jefes en la selección de personal y 3 
       <div class="contact-wrapper animated bounceInUp">
         <div class="contact-form">
           <h3>Contacto</h3>
-          <form action="">
+          <form method="post" action="formulario.php">
             <p>
               <label>Nombre Completo
               </label>
